# LearnOpenGL-Own

./: .gitignore  CMakeLists.txt  README.md
LearnOpenGL/: LearnOpenGL.sln
LearnOpenGL/LearnOpenGL/: LearnOpenGL.vcxproj  glad.c  main.cpp
LearnOpenGL/LearnOpenGL/include/glad/: glad.h
LearnOpenGL/LearnOpenGL/libs/: .editorconfig  glfw3.lib
src/: main.cpp  shader.h
src/shader/chapter1/: frag.f  vertex.v
